--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('partials/header'); %>
 <div class="container mt-5">
   <h1>Register</h1>
 
@@ -24,18 +24,18 @@
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card social-block">
         <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
+          <a class="btn btn-block btn-primary" style="background-color: #dd4b39;" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
             Sign Up with Google
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 </div>
 
-<%- include('partials/header') %>
+<%- include('partials/footer'); %>
